@@ -1,3 +1,15 @@
+Jun 21, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>
+
+ * libpcsxcore/psxbios.c: Use a separate flag to identify whether we are
+   inside a softcall or not, as ra might be modified inside the interrupt
+   handler.
+ * libpcsxcore/psxbios.h: Likewise.
+ * libpcsxcore/psxcommon.c: Likewise.
+ * plugins/dfsound/spu.c: Moved initialization routine from SPUopen() into
+   SPUinit().
+ * plugins/dfsound/freeze.c: Save spuAddr as well.
+ * po/Makefile.in.in: Silenced warning.
+
 Jun 20, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>
 
  * plugins/dfsound/freeze.c: Reset lastch when loading state, which fixes
